Add Token based Auth